--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
 <app-header></app-header>
-
-<app-recipe *ngFor="let recipe of recipes"
-            [recipe]="recipe">
-</app-recipe>
+<router-outlet></router-outlet>
