[FEAT] (Recipe) Add recipe feature

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,4 @@
 <mat-toolbar color=primary class="header">
-  <h1>Excilys Cocktail</h1>
+  <a href="#" routerLink="/recipes"><h1>Excilys Cocktails</h1></a>
+   | <a href="#" routerLink="/recipes/add"><h2>New recipe</h2></a>
 </mat-toolbar>
