--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,5 +1,20 @@
 .header {
   background-color: #1c1c1f;
   color: #FFF;
-  font-size: 50px;
+  font-size: 40px;
+}
+
+h1 {
+  font-size: 40px;
+  margin: 10px;
+}
+
+h2 {
+  font-size: 20px;
+  margin: 10px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
 }
