--- a/src/app/recipe/recipe-details/recipe-details.component.scss
+++ b/src/app/recipe/recipe-details/recipe-details.component.scss
@@ -4,9 +4,12 @@ mat-card {
   flex-direction: column;
   background-color: LightGrey;
   margin: 30px;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 350px;
 
   h3 {
+    font-size: 25px;
     margin-top: 20px;
     test-transform: uppercase;
   }
@@ -18,6 +21,7 @@ mat-card {
 
   button {
     margin: 15px;
+    align-self: flex-end;
   }
 
   mat-card-subtitle {
