--- a/src/app/recipe/recipe.component.scss
+++ b/src/app/recipe/recipe.component.scss
@@ -1,6 +1,9 @@
 .recipes {
   display: flex;
   align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 500px;
 }
 
 mat-card {
@@ -9,9 +12,12 @@ mat-card {
   flex-direction: column;
   background-color: LightGrey;
   margin: 30px;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 350px;
 
   h3 {
+    font-size: 25px;
     margin-top: 20px;
     test-transform: uppercase;
   }
@@ -23,6 +29,7 @@ mat-card {
 
   button {
     margin: 15px;
+    bottom:0px;
   }
 
   mat-card-subtitle {
