[FEAT] (Recipe) Delete recipe feature

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar color=primary class="header">
   <a href="#" routerLink="/recipes"><h1>Excilys Cocktails</h1></a>
-   | <a href="#" routerLink="/recipes/add"><h2>New recipe</h2></a>
+  <div class="vl"></div>
+  <a href="#" routerLink="/recipes/add"><h2>New recipe</h2></a>
 </mat-toolbar>
