--- a/src/app/recipe/recipes/recipes.component.html
+++ b/src/app/recipe/recipes/recipes.component.html
@@ -1,3 +1,4 @@
 <app-recipe *ngFor="let recipe of recipes"
-            [recipe]="recipe">
+            [recipe]="recipe"
+            (delete)="delete($event)">
 </app-recipe>
