--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,6 +4,14 @@
   font-size: 40px;
 }
 
+.vl {
+    border-left: 3px solid white;
+    height: 65px;
+    position: absolute;
+    left: 350px;
+    top: 0;
+}
+
 h1 {
   font-size: 40px;
   margin: 10px;
@@ -11,7 +19,7 @@ h1 {
 
 h2 {
   font-size: 20px;
-  margin: 10px;
+  margin-left: 50px;
 }
 
 a {
