--- a/src/app/recipe/recipe-details/recipe-details.component.scss
+++ b/src/app/recipe/recipe-details/recipe-details.component.scss
@@ -1,12 +1,14 @@
 mat-card {
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
   background-color: LightGrey;
   margin: 30px;
   margin-left: auto;
   margin-right: auto;
   max-width: 350px;
+
+  a {
+    text-decoration: none;
+    color: black;
+  }
 
   h3 {
     font-size: 25px;
@@ -30,9 +32,5 @@ mat-card {
     img {
       float: left;
     }
-  }
-
-  mat-card-content {
-    align-self: flex-start;
   }
 }
