--- a/src/app/recipe/recipe.component.scss
+++ b/src/app/recipe/recipe.component.scss
@@ -1,11 +1,3 @@
-.recipes {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 500px;
-}
-
 mat-card {
   align-items: center;
   justify-content: center;
@@ -22,14 +14,20 @@ mat-card {
     test-transform: uppercase;
   }
 
+  a {
+    text-decoration: none;
+    color: black;
+  }
+
   img {
     margin: 15px;
     max-width: 150px;
+    max-height: 150px;
   }
 
   button {
     margin: 15px;
-    bottom:0px;
+    bottom: 0px;
   }
 
   mat-card-subtitle {
